Updates for benchmark.